Changed the font size on the accordion titles to make sure that there is no word wrapping going on on smaller screen sizes. Removed download links on smaller screens.

--- a/style.css
+++ b/style.css
@@ -943,6 +943,7 @@ h1 {
 	
 	#dataBox {
 		width: 370px;
+        font-size: 16px;
 	}
 	
 	.map-tagline {
@@ -1026,6 +1027,10 @@ h1 {
 	    bottom: 6px;
 	    padding-top: 16px;
     }
+    
+    .download-link {
+	   display: none;
+}
     
     
     
